erDiagram
    %% Core User Management
    users {
        bigint id PK
        varchar name
        varchar email UK
        varchar password
        varchar phone
        varchar avatar
        date birth_date
        enum gender
        enum skin_type
        int loyalty_points
        boolean is_active
        timestamp created_at
        timestamp updated_at
    }

    addresses {
        bigint id PK
        bigint user_id FK
        enum type "billing/shipping"
        varchar first_name
        varchar last_name
        varchar company
        varchar address_line_1
        varchar address_line_2
        varchar city
        varchar state
        varchar postal_code
        varchar country
        varchar phone
        boolean is_default
        timestamp created_at
        timestamp updated_at
    }

    %% Product Catalog
    categories {
        bigint id PK
        varchar name
        varchar slug UK
        text description
        varchar image
        bigint parent_id FK "self-reference"
        int sort_order
        boolean is_active
        timestamp created_at
        timestamp updated_at
    }

    products {
        bigint id PK
        varchar name
        varchar slug UK
        longtext description
        text short_description
        varchar sku UK
        decimal price
        decimal sale_price
        decimal cost_price
        int stock_quantity
        enum stock_status
        decimal weight
        json dimensions
        bigint category_id FK
        varchar brand
        json tags
        json images
        varchar featured_image
        boolean is_featured
        boolean is_active
        decimal rating
        int review_count
        timestamp created_at
        timestamp updated_at
    }

    product_variants {
        bigint id PK
        bigint product_id FK
        varchar name
        varchar sku UK
        decimal price
        decimal sale_price
        int stock_quantity
        json attributes
        varchar image
        int sort_order
        boolean is_active
        timestamp created_at
        timestamp updated_at
    }

    product_ingredients {
        bigint id PK
        bigint product_id FK
        varchar name
        text description
        text benefits
        int sort_order
        timestamp created_at
        timestamp updated_at
    }

    product_reviews {
        bigint id PK
        bigint product_id FK
        bigint user_id FK
        tinyint rating
        varchar title
        text comment
        json images
        boolean is_verified
        boolean is_approved
        timestamp created_at
        timestamp updated_at
    }

    %% Shopping & Orders
    shopping_cart {
        bigint id PK
        bigint user_id FK
        varchar session_id
        timestamp created_at
        timestamp updated_at
    }

    cart_items {
        bigint id PK
        bigint cart_id FK
        bigint product_id FK
        bigint variant_id FK
        int quantity
        decimal price
        timestamp created_at
        timestamp updated_at
    }

    orders {
        bigint id PK
        varchar order_number UK
        bigint user_id FK
        enum status
        decimal subtotal
        decimal tax_amount
        decimal shipping_amount
        decimal discount_amount
        decimal total
        varchar currency
        bigint billing_address_id FK
        bigint shipping_address_id FK
        varchar payment_method
        enum payment_status
        text notes
        timestamp ordered_at
        timestamp shipped_at
        timestamp delivered_at
        timestamp created_at
        timestamp updated_at
    }

    order_items {
        bigint id PK
        bigint order_id FK
        bigint product_id FK
        bigint variant_id FK
        int quantity
        decimal price
        decimal total
        timestamp created_at
        timestamp updated_at
    }

    order_tracking {
        bigint id PK
        bigint order_id FK
        varchar status
        text description
        varchar location
        varchar carrier
        varchar tracking_number
        timestamp tracked_at
    }

    %% Wishlist & User Preferences
    wishlists {
        bigint id PK
        bigint user_id FK
        varchar name
        boolean is_default
        timestamp created_at
        timestamp updated_at
    }

    wishlist_items {
        bigint id PK
        bigint wishlist_id FK
        bigint product_id FK
        timestamp added_at
        timestamp created_at
        timestamp updated_at
    }

    recently_viewed {
        bigint id PK
        bigint user_id FK
        bigint product_id FK
        timestamp viewed_at
        timestamp created_at
        timestamp updated_at
    }

    price_alerts {
        bigint id PK
        bigint user_id FK
        bigint product_id FK
        decimal target_price
        boolean is_active
        timestamp created_at
        timestamp updated_at
    }

    %% Beauty Features
    beauty_quizzes {
        bigint id PK
        varchar title
        text description
        enum skin_type_focus
        boolean is_active
        timestamp created_at
        timestamp updated_at
    }

    quiz_questions {
        bigint id PK
        bigint quiz_id FK
        text question
        enum question_type
        json options
        int sort_order
        timestamp created_at
        timestamp updated_at
    }

    quiz_results {
        bigint id PK
        bigint user_id FK
        bigint quiz_id FK
        json answers
        json recommendations
        enum skin_type_result
        timestamp completed_at
    }

    beauty_tips {
        bigint id PK
        varchar title
        longtext content
        varchar category
        json tags
        varchar image
        bigint author_id FK
        boolean is_featured
        timestamp published_at
        timestamp created_at
        timestamp updated_at
    }

    tutorial_videos {
        bigint id PK
        varchar title
        text description
        varchar video_url
        varchar thumbnail
        int duration
        varchar category
        json tags
        int view_count
        boolean is_featured
        timestamp published_at
        timestamp created_at
        timestamp updated_at
    }

    %% Community Features
    community_posts {
        bigint id PK
        bigint user_id FK
        varchar title
        longtext content
        json images
        json tags
        int like_count
        int comment_count
        boolean is_featured
        timestamp published_at
        timestamp created_at
        timestamp updated_at
    }

    post_comments {
        bigint id PK
        bigint post_id FK
        bigint user_id FK
        bigint parent_id FK "self-reference"
        text content
        int like_count
        timestamp created_at
        timestamp updated_at
    }

    post_likes {
        bigint id PK
        bigint post_id FK
        bigint user_id FK
        timestamp created_at
        timestamp updated_at
    }

    %% Support System
    support_tickets {
        bigint id PK
        bigint user_id FK
        varchar subject
        longtext message
        varchar category
        enum priority
        enum status
        bigint assigned_to FK
        timestamp created_at
        timestamp updated_at
    }

    ticket_messages {
        bigint id PK
        bigint ticket_id FK
        bigint user_id FK
        longtext message
        boolean is_admin
        timestamp created_at
        timestamp updated_at
    }

    faqs {
        bigint id PK
        varchar category
        text question
        longtext answer
        int sort_order
        boolean is_featured
        timestamp created_at
        timestamp updated_at
    }

    %% Store & Location
    stores {
        bigint id PK
        varchar name
        text description
        varchar address
        varchar city
        varchar state
        varchar postal_code
        varchar country
        varchar phone
        varchar email
        decimal latitude
        decimal longitude
        json hours
        varchar image
        boolean is_active
        timestamp created_at
        timestamp updated_at
    }

    %% Marketing & Notifications
    notifications {
        bigint id PK
        bigint user_id FK
        varchar type
        varchar title
        text message
        json data
        boolean is_read
        timestamp read_at
        timestamp created_at
        timestamp updated_at
    }

    gift_cards {
        bigint id PK
        varchar code UK
        decimal amount
        decimal balance
        timestamp expires_at
        boolean is_active
        bigint created_by FK
        timestamp created_at
        timestamp updated_at
    }

    %% Relationships
    users ||--o{ addresses : "has many"
    users ||--o{ orders : "has many"
    users ||--o{ shopping_cart : "has one"
    users ||--o{ wishlists : "has many"
    users ||--o{ product_reviews : "has many"
    users ||--o{ quiz_results : "has many"
    users ||--o{ community_posts : "has many"
    users ||--o{ notifications : "has many"
    users ||--o{ support_tickets : "has many"
    users ||--o{ recently_viewed : "has many"
    users ||--o{ price_alerts : "has many"
    users ||--o{ post_comments : "has many"
    users ||--o{ post_likes : "has many"
    users ||--o{ ticket_messages : "has many"
    users ||--o{ beauty_tips : "authored by"

    categories ||--o{ categories : "parent of"
    categories ||--o{ products : "contains"

    products ||--o{ product_variants : "has many"
    products ||--o{ product_ingredients : "has many"
    products ||--o{ product_reviews : "has many"
    products ||--o{ cart_items : "in carts"
    products ||--o{ order_items : "in orders"
    products ||--o{ wishlist_items : "in wishlists"
    products ||--o{ price_alerts : "has alerts"
    products ||--o{ recently_viewed : "viewed by"

    shopping_cart ||--o{ cart_items : "contains"

    orders ||--o{ order_items : "contains"
    orders ||--o{ order_tracking : "tracked by"
    orders }o--|| addresses : "billing address"
    orders }o--|| addresses : "shipping address"

    wishlists ||--o{ wishlist_items : "contains"

    beauty_quizzes ||--o{ quiz_questions : "has many"
    beauty_quizzes ||--o{ quiz_results : "taken by"

    community_posts ||--o{ post_comments : "has many"
    community_posts ||--o{ post_likes : "liked by"

    post_comments ||--o{ post_comments : "parent of"

    support_tickets ||--o{ ticket_messages : "has many"
    support_tickets }o--o{ users : "assigned to"

    cart_items }o--o{ product_variants : "variant of"
    order_items }o--o{ product_variants : "variant of"
    wishlist_items }o--o{ products : "references"
    recently_viewed }o--o{ products : "references"
    price_alerts }o--o{ products : "references"
    post_likes }o--o{ community_posts : "references"
    ticket_messages }o--o{ support_tickets : "references"
    gift_cards }o--o{ users : "created by"